烧录提示框

--- a/app/src/main/res/layout/activity_burn_record.xml
+++ b/app/src/main/res/layout/activity_burn_record.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <com.example.ble.view.CommonTitle
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:background="@color/transparent"
-        app:contentColor="@color/white"
+        app:contentColor="@color/black"
         app:isArrowShow="false"
         app:isIconShow="false"
         app:isRightTextViewShow="true"
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:background="@color/transparent"
-        app:contentColor="@color/white"
+        app:contentColor="@color/black"
         app:isArrowShow="false"
         app:isIconShow="false"
         app:isRightTextViewShow="true"
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:background="@color/transparent"
-        app:contentColor="@color/white"
+        app:contentColor="@color/black"
         app:isArrowShow="false"
         app:isIconShow="false"
         app:isRightTextViewShow="true"
@@ -70,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:background="@color/transparent"
-        app:contentColor="@color/white"
+        app:contentColor="@color/black"
         app:isArrowShow="false"
         app:isIconShow="false"
         app:isRightTextViewShow="true"
